[tool.poetry]
name = "ggongsul-api"
version = "0.1.0"
description = "api server for ggongsul"
authors = ["jaegeon <zezaeoh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"
djangorestframework = "^3.12.2"
uWSGI = "^2.0.19"
mysqlclient = "^2.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
